--- a/sass/base/utilities.scss
+++ b/sass/base/utilities.scss
@@ -3,7 +3,11 @@
 }
 
 .u-margin-bottom-big {
-    margin-bottom: 8rem;
+    margin-bottom: 6rem;
+}
+
+.u-margin-top-huge {
+    margin-top: 8rem;
 }
 
 .u-margin-bottom-medium {
