--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,7 @@
     url("../img/hero.jpg");
     background-size: cover; 
     background-position: top; /* top of image not crops with changing vw */
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
     position: relative;
 
