--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,15 +2,26 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-yellow-light: #ffb900;
+$color-yellow-dark: #ff7730;
+
+$color-blue-light: #2998ff;
+$color-blue-dark: #5643fa;
+
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
+
 $color-grey-dark: #777;
 $color-bg-white: #fff;
 $color-black: #000;
 
 $color-bg-grey-1: #f7f7f7;
 
-$grid-width: 5rem;
-$gutter-vertical: 3rem;
-$gutter-horizontal: 2rem;
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
+$gutter-horizontal: 6rem;
 
 
 //FONT
@@ -20,3 +31,4 @@ $default-font-size: 1.6rem;
 
 //TRANSITION
 $transition-time: .2s
+
