--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -8,12 +8,20 @@
     }
 }
 
-//@include clearfix;
 
-[class ^= "col-"] {   //applies to all classes start with col-, can use # or * to indicate end and contain
+@include clearfix;
+/*
+[class^="col"] {   //applies to all classes start with col-, can use # or * to indicate end and contain
     float: left;
 
     &:not(:last-child){
+        margin-right: $gutter-horizontal;
+    }
+}*/
+[class^="col-"] {
+    float: left;
+
+    &:not(:last-child) {
         margin-right: $gutter-horizontal;
     }
 }
@@ -23,4 +31,30 @@
     
     
 }
+
+
+
+.col-1-of-3 {
+    width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+}
+
+.col-2-of-3 {
+    width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
+}
+
+.col-1-of-4 {
+    width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+}
+
+.col-2-of-4 {
+    width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
+}
+
+.col-3-of-4 {
+    width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+}
+
+
+
+
 
