--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,11 +8,14 @@
 @import "./base/typography";
 @import "./base/utilities.scss";
 
+@import "./components/bg-video.scss";
 @import "./components/button";
+@import "./components/cards";
 @import "./components/composition";
-//@import "./components/feature-box";
+@import "./components/feature-box";
+@import "./components/story.scss";
 
-@import "./layout/grid";
+@import "./layout/grid" ;
 @import "./layout/header";
 
 
