finished book section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-grey-light-2: #eee;
 
 
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
 $color-bg-white: #fff;
 $color-black: #000;
 
@@ -30,5 +31,9 @@ $default-font-size: 1.6rem;
 
 
 //TRANSITION
-$transition-time: .2s
+$transition-time: .2s;
+
+//BORDER RADIUS
+
+$border-radius: 3px;
 
