--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,16 @@ body {
     width: 100%;
     object-fit: cover; }
 
-.btn:link, .btn:visited {
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 55%, transparent 55%), url(../img/nat-10.jpg);
+  background-size: cover;
+  border-radius: 3px;
+  box-shadow: 0 1.4rem 4rem rgba(0, 0, 0, 0.2); }
+  .book__form {
+    width: 50%;
+    padding: 6rem; }
+
+.btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem;
@@ -140,13 +149,17 @@ body {
   /* sets all prop on element to take .2s  */
   position: relative;
   border-radius: 7rem;
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer; }
 
 .btn:hover {
   transform: translateY(-2px);
   box-shadow: 0 10px 2rem rgba(0, 0, 0, 0.2); }
 
-.btn:active {
+.btn:active,
+.btn :focus {
+  outline: none;
   transform: translateY(-1px);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   /* shadow in x shadow in y and blur and color of shadow */ }
@@ -350,6 +363,92 @@ body {
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  font-family: inherit;
+  border: none;
+  border-bottom: 2px solid transparent;
+  width: 80%;
+  display: block;
+  transition: all .3s; }
+  .form__input:focus {
+    outline: none;
+    border-bottom: 2px solid #55c57a;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1); }
+  .form__input:focus:invalid {
+    border-bottom: 2px solid #ff7730; }
+  .form__input::-webkit-input-placeholder {
+    color: #999; }
+
+.form__radio-input {
+  display: none; }
+
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-bottom: .7rem;
+  display: block;
+  transition: all .4s; }
+
+.form__input:placeholder-shown ~ .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(4rem); }
+
+.form__radio-group {
+  width: 40%;
+  display: inline-block;
+  margin-left: 4rem; }
+
+.form__radio-label {
+  font-size: 1.6rem;
+  cursor: pointer;
+  position: relative; }
+
+.form__radio-button {
+  width: 2rem;
+  height: 2rem;
+  border: 5px solid #55c57a;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: -4rem;
+  top: -.4rem; }
+  .form__radio-button::after {
+    content: "";
+    display: block;
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #55c57a;
+    opacity: 0;
+    transition: opacity 0.2s; }
+
+.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+  opacity: 1; }
+
+.footer-list {
+  list-style: none;
+  text-transform: uppercase; }
+
+.footer-item {
+  float: left;
+  margin-right: 2rem; }
+
+.footer-link {
+  text-decoration: none; }
+
 .story {
   width: 70%;
   height: 15rem;
@@ -482,3 +581,12 @@ body {
 .section-stories {
   padding: 8rem 0;
   position: relative; }
+
+.section-book {
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+  padding: 15rem 0; }
+
+.section-footer {
+  background-color: #333;
+  padding: 10rem;
+  color: #fff; }
