--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -19,7 +19,7 @@
       left: 0;
       width: 100%;
       backface-visibility: hidden;
-      border-radius: 3px;
+      border-radius: $border-radius;
       box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
       &--front {
