--- a/css/style.css
+++ b/css/style.css
@@ -438,17 +438,6 @@ body {
 .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
   opacity: 1; }
 
-.footer-list {
-  list-style: none;
-  text-transform: uppercase; }
-
-.footer-item {
-  float: left;
-  margin-right: 2rem; }
-
-.footer-link {
-  text-decoration: none; }
-
 .story {
   width: 70%;
   height: 15rem;
@@ -499,6 +488,47 @@ body {
   .story:hover .story__shape img {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%); }
+
+.footer__logo {
+  width: 15rem;
+  height: auto; }
+
+.footer__navigation {
+  border-top: 1px solid #777;
+  display: inline-block;
+  padding-top: .5rem; }
+
+.footer__copyright {
+  border-top: 1px solid #777;
+  display: block;
+  padding-top: 2rem;
+  width: 80%;
+  float: right; }
+
+.footer-list {
+  list-style: none;
+  margin-left: -4rem; }
+
+.footer-item {
+  display: inline-block; }
+  .footer-item:not(:last-child) {
+    margin-right: 1.2rem; }
+
+.footer-link, .footer-link:link,
+.footer-link :visited {
+  text-decoration: none;
+  color: #fff;
+  background-color: #333;
+  text-transform: uppercase;
+  display: inline-block;
+  font-size: 1.4rem;
+  transition: all 0.2s; }
+
+.footer-link:hover {
+  color: #55c57a;
+  -webkit-transform: rotate(5deg) scale(1.2);
+  transform: rotate(5deg) scale(1.2);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4); }
 
 .row {
   max-width: 114rem;
@@ -558,6 +588,110 @@ body {
     left: 4rem; }
   .header__logo {
     height: 35px; }
+
+.navigation__checkbox {
+  display: none; }
+
+.navigation__button {
+  background-color: #fff;
+  height: 6.5rem;
+  width: 6.5rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 2024;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer; }
+
+.navigation__background {
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 6.5rem;
+  right: 6.5rem;
+  background-image: radial-gradient(#7ed56f, #28b485);
+  z-index: 1024;
+  transition: transform .8s; }
+
+.navigation__nav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1524;
+  opacity: 0;
+  transition: all .8s; }
+
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center; }
+
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  font-size: 3rem;
+  font-weight: 300;
+  padding: 1rem 2rem;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
+  background-size: 230%;
+  transition: all .4s; }
+
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: #55c57a;
+  transform: translateX(1rem); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(60); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100%; }
+
+.navigation__icon {
+  position: relative;
+  margin-top: 2.9rem; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 3rem;
+    height: 1.5px;
+    background-color: #333;
+    display: inline-block; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    transition: all 0.2s; }
+  .navigation__icon::before {
+    top: -.8rem; }
+  .navigation__icon::after {
+    top: .8rem; }
+
+.navigation__button:hover .navigation__icon::before {
+  top: -.88rem; }
+
+.navigation__button:hover .navigation__icon::after {
+  top: .88rem; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  transform: rotate(135deg);
+  top: 0; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  transform: rotate(-135deg);
+  top: 0; }
 
 .section-about {
   background-color: #eee;
