--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,11 +16,11 @@
 @import "./components/composition";
 @import "./components/feature-box";
 @import "./components/form";
-@import "./components//footer";
-@import "./components/story.scss";
-
+@import "./components/story";
+@import "./layout/footer";
 @import "./layout/grid" ;
 @import "./layout/header";
+@import "./layout/navigation";
 
 
 @import "./pages/home";
