--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -5,7 +5,7 @@
     &:visited {
         text-transform: uppercase;
         text-decoration: none;
-        padding: 1.5rem;
+        padding: 1.5rem 4rem  ;
         display: inline-block;
         transition: all $transition-time;  /* sets all prop on element to take .2s  */ 
         position: relative; 
@@ -67,7 +67,7 @@
     }
 
     &--green {
-        background-color: $color-primary;
+        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         color: $color-bg-white;
     }
     
