--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@
 @import "./layout/grid" ;
 @import "./layout/header";
 @import "./layout/navigation";
+@import "./components/popup";
 
 
 @import "./pages/home";
