--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -31,3 +31,36 @@
       transform: translate(-50%, -50%);
    
 }
+
+//media query manager 
+/*
+0-600   Phone
+600-900  Tablet Portrait
+900-1200  Tablet Landscape
+1200-1800 Normal CSS, desktop first appraoch
+1800 + Big Desktop
+
+
+
+//breakoint arguement choices: 
+//1em = 16px, rely on browser in MQ
+
+ORDER: base + typography > general layout + grid + page layout > components
+
+*/
+
+@mixin respond($breakpoint) {
+   @if $breakpoint == phone {
+         @media (max-width : 37.5em) { @content };   //600px
+      }
+   @if $breakpoint == tab-port {
+         @media (max-width : 56.25em) { @content };  //900px
+      }
+   @if $breakpoint == tab-land {
+         @media (max-width : 75em) { @content };  //1200px
+      }
+   @if $breakpoint == big-desktop {
+         @media (min-width : 112.5em) { @content };  //1800px
+      }
+   }
+   
