--- a/sass/base/utilities.scss
+++ b/sass/base/utilities.scss
@@ -1,19 +1,27 @@
 .u-center-text {
-    text-align: center;
+    text-align: center !important;
 }
 
 .u-margin-bottom-big {
-    margin-bottom: 6rem;
+    margin-bottom: 6rem !important;
+
+    @include respond(tab-port) {  //width ? < 900
+        margin-bottom: 3rem !important;      
+    }
 }
 
 .u-margin-top-huge {
-    margin-top: 8rem;
+    margin-top: 8rem !important;
 }
 
 .u-margin-bottom-medium {
-    margin-bottom: 4rem;
+    margin-bottom: 4rem !important;
+
+    @include respond(tab-port) {  //width ? < 900
+        margin-bottom: 3rem !important;      
+    }
 }
 
 .u-margin-bottom-small {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5rem !important;
 }
