--- a/sass/components/_book.scss
+++ b/sass/components/_book.scss
@@ -7,9 +7,19 @@
     box-shadow: 0 1.4rem 4rem rgba($color-black, .2);
     //height: 50rem;
 
+    @include respond(tab-port) {  //width ? < 900
+        background-image: linear-gradient(105deg, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.9) 100%),
+    url(../img/nat-10.jpg);     
+    }
+
     &__form {
         width: 50%;
         padding: 6rem;
+
+        @include respond(tab-port) {  //width ? < 900
+            width: 85%;
+            padding: 1rem 2rem 4rem 4rem;      
+        }
     }
     
 }
