--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -4,31 +4,46 @@
     
     
     &:not(:last-child){
-        margin-bottom: $gutter-vertical; //setting the vertical margin on all rows except last
+        margin-bottom: $gutter-vertical-small; //setting the vertical margin on all rows except last
     }
+
+    @include respond(tab-port) {  //width ? < 900
+        max-width: 50rem;
+        padding: 0 3rem;
+        
+    } 
 }
 
-
 @include clearfix;
-/*
-[class^="col"] {   //applies to all classes start with col-, can use # or * to indicate end and contain
-    float: left;
 
-    &:not(:last-child){
-        margin-right: $gutter-horizontal;
-    }
-}*/
 [class^="col-"] {
     float: left;
 
     &:not(:last-child) {
         margin-right: $gutter-horizontal;
     }
+
+    @include respond(tab-port) {  //width ? < 900
+        width: 100% !important;
+        float: none;
+        margin-right: 0;
+
+        &:not(:last-child) {
+            margin-bottom: $gutter-vertical-small;
+        }
+        
+    } 
 }
 
 .col-1-of-2 {
     width: calc((100% - #{$gutter-horizontal})/2);
-    
+
+    @include respond(tab-port) {  //width ? < 900
+        width: 100%;
+        
+        
+    } 
+
     
 }
 
@@ -36,22 +51,43 @@
 
 .col-1-of-3 {
     width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+
+    @include respond(tab-port) {  //width ? < 900
+        width: 100%;
+    } 
 }
 
 .col-2-of-3 {
     width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
+
+    @include respond(tab-port) {  //width ? < 900
+        width: 100%;
+    } 
 }
 
 .col-1-of-4 {
     width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+
+    @include respond(tab-port) {  //width ? < 900
+        width: 100%;
+        margin-bottom: 2rem !important;
+    } 
 }
 
 .col-2-of-4 {
     width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
+
+    @include respond(tab-port) {  //width ? < 900
+        width: 100%;
+    } 
 }
 
 .col-3-of-4 {
     width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+
+    @include respond(tab-port) {  //width ? < 900
+        width: 100%;
+    } 
 }
 
 
