--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,6 +8,12 @@
     clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
     position: relative;
 
+    @include respond(tab-port) {  //width ? < 900
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 55vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 55vh, 0 100%);
+        height: 60vh;    
+    }
+
     &__logo-box {
         position: absolute;
         top: 4rem;
