--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,12 @@
     background-color:#eee;
     padding: 20rem 0 30rem 0;
     margin-top: -15vh;
+
+    @include respond(tab-port) {  //width ? < 900
+        padding: 20rem 0;      
+    }
+
+
 }
 
 
@@ -20,6 +26,12 @@
         transform: skewY(4deg);
 
     }
+
+    @include respond(tab-port) {  //width ? < 900
+        padding: 8rem 0 4rem 0;      
+    }
+
+    
     
 
 }
@@ -29,11 +41,16 @@
     padding: 10rem 0;
     margin-top: -5rem;
 
+    @include respond(tab-port) {  //width ? < 900
+        padding: 8rem 0;      
+    }
+
 }
 
 .section-stories {
     padding: 8rem 0;
     position: relative;
+
 }
 
 .section-book {
@@ -45,6 +62,10 @@
     background-color: #333;
     padding: 10rem;
     color: $color-bg-white;
+
+    @include respond(tab-port) {  //width ? < 900
+        padding: 2rem 6rem;      
+    }
 }
 
 
